# Mimu

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
mimu/: __main__.py
mimu/core/: __init__.py  bot.py
mimu/models/: __init__.py  bot.py  buttons.py
